--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Jun 13 2012 21:02:05 PDT</b><br>
+    <b>Thu Jun 14 2012 21:02:03 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;What we need is either less corruption, or more chance to participate in it.&quot;</i></a>
+      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
     </span>
 
 </div>
