--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Jun 13 2012 21:02:03 PDT</b><br>
+    <b>Thu Jun 14 2012 21:02:02 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;My pid is Inigo Montoya.  You kill  -9 my parent process.  Prepare to vi.&quot;</i></a>
+      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
     </span>
 
 </div>
@@ -1837,52 +1837,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_NEW                                                    bz_row_odd             ">
-
-    <td class="first-child">
-      <a name="b270"
-         href="show_bug.cgi?id=270">270</a>
-      <span style="display: none"></span>
-    </td>
-
-    <td style="white-space: nowrap">
-        <span title="enhancement">enh
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="low">low
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="Linux">Linu
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="slony1-bugs">slony1-bugs
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="NEW">NEW
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="">
-
-      
-        </span>
-    </td>
-    <td >TRUNCATE support broken in master(2.2)
-    </td>
-
-  </tr>
-
-  
-
-
-  
-
-  <tr class="bz_bugitem
-             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b80"
@@ -1927,7 +1882,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b178"
@@ -1972,7 +1927,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b176"
@@ -2017,7 +1972,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b128"
@@ -2062,7 +2017,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b59"
@@ -2107,7 +2062,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b173"
@@ -2152,7 +2107,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b174"
@@ -2197,7 +2152,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b125"
@@ -2242,7 +2197,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b137"
@@ -2287,7 +2242,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b215"
@@ -2332,7 +2287,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b254"
@@ -2377,7 +2332,7 @@
   
 
   <tr class="bz_bugitem
-             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b252"
@@ -2422,7 +2377,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b261"
@@ -2457,6 +2412,51 @@
         </span>
     </td>
     <td >Add health check indicating failover 'health'
+    </td>
+
+  </tr>
+
+  
+
+
+  
+
+  <tr class="bz_bugitem
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+
+    <td class="first-child">
+      <a name="b270"
+         href="show_bug.cgi?id=270">270</a>
+      <span style="display: none"></span>
+    </td>
+
+    <td style="white-space: nowrap">
+        <span title="enhancement">enh
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="low">low
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="Linux">Linu
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="ssinger">ssinger
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="ASSIGNED">ASSI
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="">
+
+      
+        </span>
+    </td>
+    <td >TRUNCATE support broken in master(2.2)
     </td>
 
   </tr>
@@ -2520,7 +2520,6 @@
             <input type="hidden" name="id" value="264">
             <input type="hidden" name="id" value="267">
             <input type="hidden" name="id" value="269">
-            <input type="hidden" name="id" value="270">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
             <input type="hidden" name="id" value="176">
@@ -2534,6 +2533,7 @@
             <input type="hidden" name="id" value="254">
             <input type="hidden" name="id" value="252">
             <input type="hidden" name="id" value="261">
+            <input type="hidden" name="id" value="270">
           <input type="hidden" name="format" value="multiple">
           <input type="submit" id="long_format" value="Long Format">
         </form>
@@ -2573,7 +2573,6 @@
             <input type="hidden" name="id" value="264">
             <input type="hidden" name="id" value="267">
             <input type="hidden" name="id" value="269">
-            <input type="hidden" name="id" value="270">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
             <input type="hidden" name="id" value="176">
@@ -2587,6 +2586,7 @@
             <input type="hidden" name="id" value="254">
             <input type="hidden" name="id" value="252">
             <input type="hidden" name="id" value="261">
+            <input type="hidden" name="id" value="270">
             <input type="hidden" name="excludefield" value="attachmentdata">
             <input type="submit" value="XML" id="xml">
         </form>
