--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Jun 20 2012 21:02:01 PDT</b><br>
+    <b>Thu Jun 21 2012 21:02:02 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Very funny, Scotty. Now beam down my clothes.&quot;</i></a>
+      <a href="quips.cgi"><i>nothing</i></a>
     </span>
 
 </div>
