--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Jun 30 2012 21:03:08 PDT</b><br>
+    <b>Sun Jul  1 2012 21:03:24 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;What we need is either less corruption, or more chance to participate in it.&quot;</i></a>
+      <a href="quips.cgi"><i>&quot;I love the way  Microsoft follows standards. In  much the same manner that fish follow migrating caribou.&quot; -- Sinister Midget</i></a>
     </span>
 
 </div>
