--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Jun 30 2012 21:03:03 PDT</b><br>
+    <b>Sun Jul  1 2012 21:03:20 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
+      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
     </span>
 
 </div>
