--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Jul 14 2012 21:01:55 PDT</b><br>
+    <b>Sun Jul 15 2012 21:01:55 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Let's face it  -- ASCII text is  a far richer medium  than most of us deserve.&quot;  -- Scott McNealy</i></a>
+      <a href="quips.cgi"><i>nothing</i></a>
     </span>
 
 </div>
