--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Dec  5 2012 21:02:05 PST</b><br>
+    <b>Thu Dec  6 2012 21:02:04 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;I love the way  Microsoft follows standards. In  much the same manner that fish follow migrating caribou.&quot; -- Sinister Midget</i></a>
+      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
     </span>
 
 </div>
