--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Dec  5 2012 21:02:04 PST</b><br>
+    <b>Thu Dec  6 2012 21:02:02 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Very funny, Scotty. Now beam down my clothes.&quot;</i></a>
+      <a href="quips.cgi"><i>It's always darkest just before it gets pitch black.</i></a>
     </span>
 
 </div>
