--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Thu Jan 10 2013 21:01:56 PST</b><br>
+    <b>Fri Jan 11 2013 21:01:57 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>No one ever says, &quot;Hey, I can't read that ASCII attachment you sent me.&quot;</i></a>
+      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
     </span>
 
 </div>
