--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sun Jan 13 2013 21:01:54 PST</b><br>
+    <b>Mon Jan 14 2013 21:01:56 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
+      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
     </span>
 
 </div>
