--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Mar  4 2013 21:02:15 PST</b><br>
+    <b>Tue Mar  5 2013 21:02:14 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>It's always darkest just before it gets pitch black.</i></a>
+      <a href="quips.cgi"><i>Ubuntu is an ancient African word, meaning &quot;can't configure Debian&quot;</i></a>
     </span>
 
 </div>
