--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Thu Mar  7 2013 21:02:01 PST</b><br>
+    <b>Fri Mar  8 2013 21:02:00 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
+      <a href="quips.cgi"><i>&quot;Let's face it  -- ASCII text is  a far richer medium  than most of us deserve.&quot;  -- Scott McNealy</i></a>
     </span>
 
 </div>
