--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Mar  8 2013 21:02:00 PST</b><br>
+    <b>Sat Mar  9 2013 21:01:53 PST</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Let's face it  -- ASCII text is  a far richer medium  than most of us deserve.&quot;  -- Scott McNealy</i></a>
+      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
     </span>
 
 </div>
