Check in mailing list subscribers - run of scripts/Slony-Archive-Mail-Subscribers.sh

--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Mar  9 2013 21:01:54 PST</b><br>
+    <b>Sun Mar 10 2013 21:01:50 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;My pid is Inigo Montoya.  You kill  -9 my parent process.  Prepare to vi.&quot;</i></a>
+      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
     </span>
 
 </div>
