--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Sat Mar  9 2013 21:01:53 PST</b><br>
+    <b>Sun Mar 10 2013 21:01:49 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
+      <a href="quips.cgi"><i>It's always darkest just before it gets pitch black.</i></a>
     </span>
 
 </div>
