--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Mar 11 2013 21:01:51 PDT</b><br>
+    <b>Tue Mar 12 2013 21:01:42 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
+      <a href="quips.cgi"><i>&quot;I love the way  Microsoft follows standards. In  much the same manner that fish follow migrating caribou.&quot; -- Sinister Midget</i></a>
     </span>
 
 </div>
