--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Mar 13 2013 21:01:40 PDT</b><br>
+    <b>Thu Mar 14 2013 21:01:32 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>It's always darkest just before it gets pitch black.</i></a>
+      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
     </span>
 
 </div>
