--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Mar 15 2013 21:01:28 PDT</b><br>
+    <b>Sat Mar 16 2013 21:01:22 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>No one ever says, &quot;Hey, I can't read that ASCII attachment you sent me.&quot;</i></a>
     </span>
 
 </div>
