--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Tue Mar 19 2013 21:01:11 PDT</b><br>
+    <b>Wed Mar 20 2013 21:01:07 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;Very funny, Scotty. Now beam down my clothes.&quot;</i></a>
+      <a href="quips.cgi"><i>&quot;Let's face it  -- ASCII text is  a far richer medium  than most of us deserve.&quot;  -- Scott McNealy</i></a>
     </span>
 
 </div>
@@ -259,7 +259,7 @@
 
 
 
-  <span class="bz_result_count">52 bugs found.
+  <span class="bz_result_count">53 bugs found.
   </span>
 
 
@@ -1927,7 +1927,52 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_NEW                                                    bz_row_odd             ">
+
+    <td class="first-child">
+      <a name="b287"
+         href="show_bug.cgi?id=287">287</a>
+      <span style="display: none"></span>
+    </td>
+
+    <td style="white-space: nowrap">
+        <span title="enhancement">enh
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="low">low
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="Linux">Linu
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="slony1-bugs">slony1-bugs
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="NEW">NEW
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="">
+
+      
+        </span>
+    </td>
+    <td >UPDATE FUNCTIONS in 2.2 doesn't work
+    </td>
+
+  </tr>
+
+  
+
+
+  
+
+  <tr class="bz_bugitem
+             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b80"
@@ -1972,7 +2017,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b178"
@@ -2017,7 +2062,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b176"
@@ -2062,7 +2107,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b281"
@@ -2107,7 +2152,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b128"
@@ -2152,7 +2197,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b59"
@@ -2197,7 +2242,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b173"
@@ -2242,7 +2287,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b174"
@@ -2287,7 +2332,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b280"
@@ -2332,7 +2377,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b125"
@@ -2377,7 +2422,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b137"
@@ -2422,7 +2467,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b271"
@@ -2467,7 +2512,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b215"
@@ -2512,7 +2557,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b254"
@@ -2557,7 +2602,7 @@
   
 
   <tr class="bz_bugitem
-             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b252"
@@ -2602,7 +2647,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b261"
@@ -2648,7 +2693,7 @@
 
 
 
-<span class="bz_result_count">52 bugs found.
+<span class="bz_result_count">53 bugs found.
 </span>
 
 <br>
@@ -2702,6 +2747,7 @@
             <input type="hidden" name="id" value="283">
             <input type="hidden" name="id" value="285">
             <input type="hidden" name="id" value="286">
+            <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
             <input type="hidden" name="id" value="176">
@@ -2759,6 +2805,7 @@
             <input type="hidden" name="id" value="283">
             <input type="hidden" name="id" value="285">
             <input type="hidden" name="id" value="286">
+            <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="80">
             <input type="hidden" name="id" value="178">
             <input type="hidden" name="id" value="176">
