--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Fri Mar 22 2013 21:00:58 PDT</b><br>
+    <b>Sun Mar 24 2013 21:00:55 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>No one ever says, &quot;Hey, I can't read that ASCII attachment you sent me.&quot;</i></a>
+      <a href="quips.cgi"><i>&quot;I love the way  Microsoft follows standards. In  much the same manner that fish follow migrating caribou.&quot; -- Sinister Midget</i></a>
     </span>
 
 </div>
