Check in mailing list subscribers - run of scripts/Slony-Archive-Mail-Subscribers.sh

--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon Apr 15 2013 20:59:21 PDT</b><br>
+    <b>Tue Apr 16 2013 20:59:13 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;What we need is either less corruption, or more chance to participate in it.&quot;</i></a>
+      <a href="quips.cgi"><i>nothing</i></a>
     </span>
 
 </div>
