Check in mailing list subscribers - run of scripts/Slony-Archive-Mail-Subscribers.sh

--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Apr 24 2013 20:58:39 PDT</b><br>
+    <b>Fri Apr 26 2013 20:58:31 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
+      <a href="quips.cgi"><i>&quot;My pid is Inigo Montoya.  You kill  -9 my parent process.  Prepare to vi.&quot;</i></a>
     </span>
 
 </div>
