--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Wed Apr 24 2013 20:58:38 PDT</b><br>
+    <b>Fri Apr 26 2013 20:58:30 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>The  trouble with doing something right  the first time is that nobody appreciates how difficult it was.</i></a>
+      <a href="quips.cgi"><i>&quot;The world needs more people like us and fewer like them.&quot;</i></a>
     </span>
 
 </div>
