Check in mailing list subscribers - run of scripts/Slony-Archive-Mail-Subscribers.sh

--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon May 13 2013 21:01:49 PDT</b><br>
+    <b>Tue May 14 2013 21:01:46 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>Ubuntu is an ancient African word, meaning &quot;can't configure Debian&quot;</i></a>
+      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
     </span>
 
 </div>
