--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon May 13 2013 21:01:47 PDT</b><br>
+    <b>Tue May 14 2013 21:01:44 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>If you can't see the bright side of things, polish the dark side...</i></a>
     </span>
 
 </div>
