Check in mailing list subscribers - run of scripts/Slony-Archive-Mail-Subscribers.sh

--- a/Slony-Bugzilla/bugs-closed.html
+++ b/Slony-Bugzilla/bugs-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon May 27 2013 21:01:05 PDT</b><br>
+    <b>Tue May 28 2013 21:01:01 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>&quot;What we need is either less corruption, or more chance to participate in it.&quot;</i></a>
+      <a href="quips.cgi"><i>&quot;My pid is Inigo Montoya.  You kill  -9 my parent process.  Prepare to vi.&quot;</i></a>
     </span>
 
 </div>
@@ -259,7 +259,7 @@
 
 
 
-  <span class="bz_result_count">236 bugs found.
+  <span class="bz_result_count">237 bugs found.
   </span>
 
 
@@ -9559,7 +9559,52 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_RESOLVED             bz_INVALID                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+
+    <td class="first-child">
+      <a name="b287"
+         href="show_bug.cgi?id=287">287</a>
+      <span style="display: none"></span>
+    </td>
+
+    <td style="white-space: nowrap">
+        <span title="enhancement">enh
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="low">low
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="Linux">Linu
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="slony1-bugs">slony1-bugs
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="RESOLVED">RESO
+        </span>
+    </td>
+    <td style="white-space: nowrap">
+        <span title="FIXED">FIXE
+
+      
+        </span>
+    </td>
+    <td >UPDATE FUNCTIONS in 2.2 doesn't work
+    </td>
+
+  </tr>
+
+  
+
+
+  
+
+  <tr class="bz_bugitem
+             bz_minor             bz_low             bz_RESOLVED             bz_INVALID                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b288"
@@ -9604,7 +9649,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_normal             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b121"
@@ -9649,7 +9694,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_minor             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b122"
@@ -9694,7 +9739,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b141"
@@ -9739,7 +9784,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b142"
@@ -9784,7 +9829,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_major             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b147"
@@ -9829,7 +9874,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_normal             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b155"
@@ -9874,7 +9919,7 @@
   
 
   <tr class="bz_bugitem
-             bz_critical             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_critical             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b160"
@@ -9919,7 +9964,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b190"
@@ -9964,7 +10009,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b192"
@@ -10009,7 +10054,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b207"
@@ -10054,7 +10099,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b208"
@@ -10099,7 +10144,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b216"
@@ -10144,7 +10189,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b218"
@@ -10189,7 +10234,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b220"
@@ -10234,7 +10279,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b222"
@@ -10279,7 +10324,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b223"
@@ -10324,7 +10369,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b227"
@@ -10369,7 +10414,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b228"
@@ -10414,7 +10459,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b229"
@@ -10459,7 +10504,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b230"
@@ -10504,7 +10549,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b233"
@@ -10549,7 +10594,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_minor             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b236"
@@ -10594,7 +10639,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_minor             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b244"
@@ -10639,7 +10684,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b247"
@@ -10684,7 +10729,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b248"
@@ -10729,7 +10774,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b270"
@@ -10774,7 +10819,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
+             bz_normal             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b276"
@@ -10819,7 +10864,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_odd             ">
+             bz_enhancement             bz_low             bz_RESOLVED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b286"
@@ -10864,7 +10909,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_high             bz_CLOSED             bz_FIXED                                       bz_row_even             ">
+             bz_normal             bz_high             bz_CLOSED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b104"
@@ -10909,7 +10954,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_medium             bz_CLOSED             bz_FIXED                                       bz_row_odd             ">
+             bz_normal             bz_medium             bz_CLOSED             bz_FIXED                                       bz_row_even             ">
 
     <td class="first-child">
       <a name="b52"
@@ -10954,7 +10999,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_CLOSED             bz_FIXED                                       bz_row_even             ">
+             bz_major             bz_low             bz_CLOSED             bz_FIXED                                       bz_row_odd             ">
 
     <td class="first-child">
       <a name="b138"
@@ -11000,7 +11045,7 @@
 
 
 
-<span class="bz_result_count">236 bugs found.
+<span class="bz_result_count">237 bugs found.
 </span>
 
 <br>
@@ -11222,6 +11267,7 @@
             <input type="hidden" name="id" value="278">
             <input type="hidden" name="id" value="284">
             <input type="hidden" name="id" value="285">
+            <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="288">
             <input type="hidden" name="id" value="121">
             <input type="hidden" name="id" value="122">
@@ -11463,6 +11509,7 @@
             <input type="hidden" name="id" value="278">
             <input type="hidden" name="id" value="284">
             <input type="hidden" name="id" value="285">
+            <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="288">
             <input type="hidden" name="id" value="121">
             <input type="hidden" name="id" value="122">
