--- a/Slony-Bugzilla/bugs-not-closed.html
+++ b/Slony-Bugzilla/bugs-not-closed.html
@@ -233,12 +233,12 @@
 
 <div class="bz_query_head" align="center">
   <span class="bz_query_timestamp">
-    <b>Mon May 27 2013 21:01:03 PDT</b><br>
+    <b>Tue May 28 2013 21:01:00 PDT</b><br>
   </span>
 
 
     <span class="bz_quip">
-      <a href="quips.cgi"><i>PGRES_FATAL_ERROR</i></a>
+      <a href="quips.cgi"><i>&quot;XML combines all the inefficiency of text-based formats with most of the unreadability of binary formats :-) &quot; -- Oren Tirosh</i></a>
     </span>
 
 </div>
@@ -259,7 +259,7 @@
 
 
 
-  <span class="bz_result_count">52 bugs found.
+  <span class="bz_result_count">51 bugs found.
   </span>
 
 
@@ -1837,52 +1837,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_NEW                                                    bz_row_odd             ">
-
-    <td class="first-child">
-      <a name="b287"
-         href="show_bug.cgi?id=287">287</a>
-      <span style="display: none"></span>
-    </td>
-
-    <td style="white-space: nowrap">
-        <span title="enhancement">enh
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="low">low
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="Linux">Linu
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="slony1-bugs">slony1-bugs
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="NEW">NEW
-        </span>
-    </td>
-    <td style="white-space: nowrap">
-        <span title="">
-
-      
-        </span>
-    </td>
-    <td >UPDATE FUNCTIONS in 2.2 doesn't work
-    </td>
-
-  </tr>
-
-  
-
-
-  
-
-  <tr class="bz_bugitem
-             bz_critical             bz_low             bz_NEW                                                    bz_row_even             ">
+             bz_critical             bz_low             bz_NEW                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b289"
@@ -1927,7 +1882,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_NEW                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_NEW                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b290"
@@ -1972,7 +1927,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_normal             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b80"
@@ -2017,7 +1972,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_high             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b178"
@@ -2062,7 +2017,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b176"
@@ -2107,7 +2062,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b281"
@@ -2152,7 +2107,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b128"
@@ -2197,7 +2152,7 @@
   
 
   <tr class="bz_bugitem
-             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_normal             bz_medium             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b59"
@@ -2242,7 +2197,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b173"
@@ -2287,7 +2242,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b174"
@@ -2332,7 +2287,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b125"
@@ -2377,7 +2332,7 @@
   
 
   <tr class="bz_bugitem
-             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_major             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b137"
@@ -2422,7 +2377,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b271"
@@ -2467,7 +2422,7 @@
   
 
   <tr class="bz_bugitem
-             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_minor             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b215"
@@ -2512,7 +2467,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b254"
@@ -2557,7 +2512,7 @@
   
 
   <tr class="bz_bugitem
-             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
+             bz_trivial             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
 
     <td class="first-child">
       <a name="b252"
@@ -2602,7 +2557,7 @@
   
 
   <tr class="bz_bugitem
-             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_even             ">
+             bz_enhancement             bz_low             bz_ASSIGNED                                                    bz_row_odd             ">
 
     <td class="first-child">
       <a name="b261"
@@ -2648,7 +2603,7 @@
 
 
 
-<span class="bz_result_count">52 bugs found.
+<span class="bz_result_count">51 bugs found.
 </span>
 
 <br>
@@ -2700,7 +2655,6 @@
             <input type="hidden" name="id" value="269">
             <input type="hidden" name="id" value="279">
             <input type="hidden" name="id" value="283">
-            <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="289">
             <input type="hidden" name="id" value="290">
             <input type="hidden" name="id" value="80">
@@ -2757,7 +2711,6 @@
             <input type="hidden" name="id" value="269">
             <input type="hidden" name="id" value="279">
             <input type="hidden" name="id" value="283">
-            <input type="hidden" name="id" value="287">
             <input type="hidden" name="id" value="289">
             <input type="hidden" name="id" value="290">
             <input type="hidden" name="id" value="80">
